[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elkpy"
version = "0.1.0"
description = "Python port of elkjs - automatic graph layout based on ELK"
requires-python = ">=3.8"
license = {text = "EPL-2.0"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["elkpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
